[package]
name = "planets"
version = "0.1.0"
authors = ["Cameron Reikes <cameronreikes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.25.4"
sdl2 = { version = "0.34.5", features = ["bundled"] }
rapier2d-f64 = { version = "0.7.2", features = [ "enhanced-determinism", "serde-serialize" ] }
gl = "0.14.0"